fix friends list bottom alignment

--- a/friends.css
+++ b/friends.css
@@ -49,7 +49,7 @@
 }
 
  .all-friends {
-     height: 250px;
+     height: 258px;
      overflow-y: scroll;
 }
  .friends-header {
